--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,14 @@
 @tailwind utilities;
 
 
-.fixed-bottom {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
-  }
+html, body, #root {
+  height: 100%;
+}
+
+/* Ensure Navbar sticks to bottom */
+.navbar {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+}
